compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__records__const_record_update_generic_respecialization.snap
---
source: compiler-core/src/erlang/tests/records.rs
expression: "\npub type Box(a) {\n  Box(name: String, value: a)\n}\n\npub const base = Box(\"score\", 50)\npub const updated = Box(..base, value: \"Hello\")\n\npub fn main() {\n  #(base, updated)\n}\n"
---
----- SOURCE CODE

pub type Box(a) {
  Box(name: String, value: a)
}

pub const base = Box("score", 50)
pub const updated = Box(..base, value: "Hello")

pub fn main() {
  #(base, updated)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0, base/0, updated/0]).
-export_type([box/1]).

-type box(I) :: {box, binary(), I}.

-spec base() -> box(integer()).
base() ->
    {box, ~"score", 50}.

-spec updated() -> box(binary()).
updated() ->
    {box, ~"score", ~"Hello"}.

-spec main() -> {box(integer()), box(binary())}.
main() ->
    {{box, ~"score", 50}, {box, ~"score", ~"Hello"}}.
