compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__records__constant_record_update_with_unlabelled_fields.snap
---
source: compiler-core/src/erlang/tests/records.rs
expression: "\npub type Wibble {\n  Wibble(Int, Float, b: Bool, s: String)\n}\n\npub const record = Wibble(1, 3.14, True, \"Hello\")\npub const updated = Wibble(..record, b: False)\n\npub fn main() {\n  updated\n}\n"
---
----- SOURCE CODE

pub type Wibble {
  Wibble(Int, Float, b: Bool, s: String)
}

pub const record = Wibble(1, 3.14, True, "Hello")
pub const updated = Wibble(..record, b: False)

pub fn main() {
  updated
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0, record/0, updated/0]).
-export_type([wibble/0]).

-type wibble() :: {wibble, integer(), float(), boolean(), binary()}.

-spec record() -> wibble().
record() ->
    {wibble, 1, 3.14, true, ~"Hello"}.

-spec updated() -> wibble().
updated() ->
    {wibble, 1, 3.14, false, ~"Hello"}.

-spec main() -> wibble().
main() ->
    {wibble, 1, 3.14, false, ~"Hello"}.
