compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__records__imported_qualified_constructor_as_fn_name_escape.snap
---
source: compiler-core/src/erlang/tests/records.rs
expression: "import other_module\n\npub fn main() {\n  other_module.Let\n}"
---
----- SOURCE CODE
import other_module

pub fn main() {
  other_module.Let
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> fun((integer()) -> other_module:'let'()).
main() ->
    fun(_value) ->
        {'let', _value}
    end.
