compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__records__module_types.snap
---
source: compiler-core/src/erlang/tests/records.rs
expression: "record_definition(\"PetCat\",\n&[(\"name\",\nArc::new(Type::Named\n{\n    publicity: Publicity::Public, package: \"package\".into(), module:\n    module_name, name: \"my_type\".into(), arguments: vec![], inferred_variant:\n    None,\n}))])"
---
-record(pet_cat, {
    name :: name:my_type()
}).
