compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__records__record_constants.snap
---
source: compiler-core/src/erlang/tests/records.rs
expression: "pub type Test { A }\nconst some_test = A\npub fn a() { A }"
---
----- SOURCE CODE
pub type Test { A }
const some_test = A
pub fn a() { A }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([a/0]).
-export_type([test/0]).

-type test() :: a.

-spec a() -> test().
a() ->
    a.
